// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutList /> as horizontal list with additional className matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__horizontal TEST_CLASSNAME y-layoutList__align-left y-layoutList__gutterSize-xSmall"
/>
`;

exports[`<LayoutList /> as horizontal list with align "right" matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__horizontal y-layoutList__align-right y-layoutList__gutterSize-xSmall"
/>
`;

exports[`<LayoutList /> as horizontal list with child content matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__horizontal y-layoutList__align-left y-layoutList__gutterSize-xSmall"
>
  list content
</ul>
`;

exports[`<LayoutList /> as horizontal list with gutterSize matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__horizontal y-layoutList__align-left y-layoutList__gutterSize-large"
/>
`;

exports[`<LayoutList /> as horizontal list without props matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__horizontal y-layoutList__align-left y-layoutList__gutterSize-xSmall"
/>
`;

exports[`<LayoutList /> as vertical list with additional className matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__vertical TEST_CLASSNAME"
/>
`;

exports[`<LayoutList /> as vertical list with child content matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__vertical"
>
  list content
</ul>
`;

exports[`<LayoutList /> as vertical list without props matches its snapshot 1`] = `
<ul
  className="y-layoutList y-layoutList__vertical"
/>
`;
